IoC/CiliumTestSuite/unauthorized-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: unauthorized-client
spec:
  containers:
  - name: netshoot
    image: nicolaka/netshoot
    command: ["sleep", "infinity"]
